--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "main.tsx",
   "scripts": {
     "start": "webpack-dev-server --mode development",
-    "build": "node_modules/.bin/webpack --mode production",
+    "build": "webpack --mode production",
     "postinstall": "chmod +x node_modules/.bin/webpack"
   },
   "keywords": [],
